Set Java11 as minimal version
* Remove use of 'task.options.release' for Java version configuration
in favour of Gradle's preferrs 'toolchain'.
* Removed Java 8 from pipelines.
* Bump Gradle to latest v8.0.2
* Remove use of 'io.spring.dependency-management' Gradle plugin in
'spring-boot' app in favor of Gradle's BOM support. This reduces
maintenance since only Boot version needs to be updated.

Fixes #1150

Remove unnecessary configurations